--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -108,6 +108,12 @@
     transform: scale(1.05);
 }
 
+.leaflet-popup-content-wrapper,
+.leaflet-popup-tip {
+    background: none !important;
+    box-shadow: none !important;
+}
+
 .leaflet-popup-content {
     margin: 0;
     max-width: 200px;
